# jaroslav.tech

./: .gitignore  Dockerfile  LICENSE  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
app/: Dockerfile
app/project/: settings.py  urls.py
project/: settings.py
